--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -2,16 +2,16 @@
  
  
     <div class=" items-start  font-semibold   mx-auto md:flex  space-x-6 pr-6 ">
-      <a class="header-link group text-white">
+      <a class="header-link group text-white" (click)="navigateById(1)">
         page 1
       </a>
-      <a class="header-link group text-white">
+      <a class="header-link group text-white" (click)="navigateById(2)">
         page 2
       </a>
-      <a class="header-link group text-white">
+      <a class="header-link group text-white" (click)="navigateById(3)">
         page 3
       </a>
-      <a class="header-link group text-white">
+      <a class="header-link group text-white" (click)="navigateById(4)">
         page 4
       </a>
 
