--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,17 +1,17 @@
 <div class="sticky bg-[#040714] top-0 z-[1000] flex  items-center px-10 md:px-12 h-[72px]">
  
  
-    <div class=" items-start  font-semibold   mx-auto md:flex  space-x-6 pr-6 ">
-      <a class="header-link group text-white" (click)="navigateById(1)">
+    <div class="cursor-pointer items-start  font-semibold   mx-auto md:flex  space-x-6 pr-6 ">
+      <a class="cursor-pointer header-link group text-white" (click)="navigateById(1)">
         page 1
       </a>
-      <a class="header-link group text-white" (click)="navigateById(2)">
+      <a class="cursor-pointer header-link group text-white" (click)="navigateById(2)">
         page 2
       </a>
-      <a class="header-link group text-white" (click)="navigateById(3)">
+      <a class="cursor-pointer header-link group text-white" (click)="navigateById(3)">
         page 3
       </a>
-      <a class="header-link group text-white" (click)="navigateById(4)">
+      <a class="cursor-pointer header-link group text-white" (click)="navigateById(4)">
         page 4
       </a>
 
